Refactor doc for installation with packages or Docker