@@ -1,18 +1,127 @@
-Para la instalación de todo el sistema se asume la utilización de un servidor con Linux. En caso de no estar familiarizado con este sistema operativo, se recomienda leer antes una [introducción](https://geotalleres.readthedocs.io/es/latest/linux/linux.html).
+Para la instalación de todo el sistema mediante paquetes se asume la utilización de un servidor con Linux. En caso de no estar familiarizado con este sistema operativo, se recomienda leer antes una [introducción](https://geotalleres.readthedocs.io/es/latest/linux/linux.html).
 
 > **NOTA**: Esta guía se ha realizado utilizando Ubuntu 16.04 (Xenial).
 
-Como hemos visto en la [introducción](../index.md), el portal es una aplicación web Java que se ejecuta en Tomcat. Es imprescindible seguir las instrucciones para instalar Apache y Tomcat del apartado de [GeoServer](geoserver.md#apache-tomcat) para poder continuar.
+## PostgreSQL/PostGIS
 
-## Instalación
+Para instalar PostgreSQL/PostGIS bastará con ejecutar:
 
-Una vez tenemos Apache y Tomcat funcionando, descargaremos el portal en el directorio de aplicaciones de Tomcat:
+```bash
+apt update
+apt install -y postgresql postgis
+```
+
+Una vez la instalación ha terminado habrá que configurar el acceso desde el exterior de la máquina. Para ello editaremos el fichero `/etc/postgresql/<version>/main/postgresql.conf` y reemplazaremos la línea:
+
+```
+#listen_addresses = 'localhost'
+```
+
+con:
+
+```
+listen_addresses = '*'
+```
+
+Esto sirve para que PostgreSQL acepte conexiones de cualquier máquina.
+
+Posteriormente añadiremos esto al final del fichero `/etc/postgresql/<version>/main/pg_hba.conf`:
+
+```
+host    all             all             0.0.0.0/0               md5
+```
+
+que sirve para poder hacer login en la base de datos utilizando usuario y contraseña desde cualquier máquina.
+
+Por último arrancaremos el servicio:
+
+```bash
+systemctl enable postgresql
+service postgresql start
+```
+
+## Apache / Tomcat
+
+Como hemos visto en la [introducción](../index.md), tanto GeoServer como el portal son aplicaciones web Java que se ejecutan en Tomcat. Por tanto, lo primero que tenemos que hacer es instalar Apache y Tomcat:
+
+```bash
+apt update
+apt install -y tomcat8 apache2
+```
+
+y arrancar los servicios:
+
+```bash
+systemctl enable tomcat8
+service tomcat8 start
+systemctl enable apache2
+service apache2 start
+```
+
+## JAI
+
+Las librerías JAI son unas librerías Java para el procesado de imágenes que utiliza GeoServer. Para instalarlas, ejecutaremos los siguientes comandos:
+
+```bash
+cd /usr/lib/jvm/java-8-*
+wget http://download.java.net/media/jai/builds/release/1_1_3/jai-1_1_3-lib-linux-amd64-jdk.bin
+tail -n +139 jai-1_1_3-lib-linux-amd64-jdk.bin > INSTALL-jai
+chmod u+x INSTALL-jai
+./INSTALL-jai
+rm jai-1_1_3-lib-linux-amd64-jdk.bin INSTALL-jai *.txt
+wget http://download.java.net/media/jai-imageio/builds/release/1.1/jai_imageio-1_1-lib-linux-amd64-jdk.bin
+tail -n +215 jai_imageio-1_1-lib-linux-amd64-jdk.bin > INSTALL-jai_imageio
+chmod u+x INSTALL-jai_imageio
+./INSTALL-jai_imageio
+rm jai_imageio-1_1-lib-linux-amd64-jdk.bin INSTALL-jai_imageio *.txt
+```
+
+## GeoServer
+
+Descargaremos GeoServer:
+
+```bash
+cd /tmp
+wget http://sourceforge.net/projects/geoserver/files/GeoServer/2.12.1/geoserver-2.12.1-war.zip
+```
+
+y lo desplegaremos en el directorio de aplicaciones de Tomcat:
+
+```bash
+unzip geoserver-*-war.zip -d geoserver
+mv geoserver/geoserver.war /var/lib/tomcat8/webapps
+rm -rf geoserver*
+```
+
+### Directorio de configuración
+
+Al desplegar GeoServer, el directorio de datos de GeoServer por defecto está dentro del directorio de aplicaciones de Tomcat. Por ello, si no lo movemos de sitio, cada vez que actualicemos Tomcat o GeoServer, perderemos este directorio de datos. Así que primero moveremos el directorio por defecto a otra ruta:
+
+```bash
+mv /var/lib/tomcat8/webapps/geoserver/data /var/local/geoserver
+```
+
+Y luego configuraremos ese directorio cambiando el valor de `JAVA_OPTS` en `/etc/default/tomcat8` por:
+
+```bash
+JAVA_OPTS="-server -Djava.awt.headless=true -Xms768m -Xmx1560m -XX:+UseConcMarkSweepGC -XX:NewSize=48m -DGEOSERVER_DATA_DIR=/var/local/geoserver"
+```
+
+Por último, reiniciaremos Tomcat:
+
+```bash
+service tomcat8 restart
+```
+
+## Portal
+
+Descargaremos el portal en el directorio de aplicaciones de Tomcat:
 
 ```bash
 wget http://nullisland.geomati.co:8082/repository/snapshots/org/geoladris/apps/demo/7.0.0-SNAPSHOT/demo-7.0.0-SNAPSHOT.war -O /var/lib/tomcat8/webapps/portal.war
 ```
 
-## Directorio de configuración
+### Directorio de configuración
 
 El portal tiene un directorio de configuración que por defecto está dentro del directorio de aplicaciones de Tomcat. Por ello, si no lo movemos de sitio, cada vez que actualicemos Tomcat o el portal, perderemos su configuración. Así que primero moveremos el directorio por defecto a otra ruta:
 
@@ -27,7 +136,7 @@ Y luego configuraremos ese directorio al final del fichero `/etc/default/tomcat8
 GEOLADRIS_CONFIG_DIR=/var/geoladris
 ```
 
-## Base de datos
+### Base de datos
 
 El portal tiene diferentes plugins que acceden a una base de datos para funcionar. Esta base de datos se configura en el fichero `/etc/tomcat8/Catalina/localhost/portal.xml`. En él encontraremos un elemento `<Resource>` con los datos de conexión de la base de datos (`url`, `username` y `password`). En nuestro caso, debería quedar algo así:
 
@@ -47,7 +156,12 @@ service tomcat8 restart
 
 ## Conexión
 
-Llegados a este punto deberíamos poder acceder al portal desde un navegador en la URL `http://<servidor>:8080/portal`. Para eliminar el puerto `:8080` de la URL tendremos que habilitar un proxy de Apache:
+Llegados a este punto deberíamos poder acceder al portal y a GeoServer desde un navegador en las siguientes URLs:
+
+* `http://<servidor>:8080/portal`.
+* `http://<servidor>:8080/geoserver`.
+
+Para eliminar el puerto `:8080` de la URL tendremos que habilitar un proxy de Apache:
 
 ```bash
 a2enmod proxy_http
@@ -61,6 +175,10 @@ ProxyPass /portal  http://localhost:8080/portal
 ProxyPass /portal/ http://localhost:8080/portal/
 ProxyPassReverse /portal  http://localhost:8080/portal
 ProxyPassReverse /portal/ http://localhost:8080/portal/
+ProxyPass /geoserver  http://localhost:8080/geoserver
+ProxyPass /geoserver/ http://localhost:8080/geoserver/
+ProxyPassReverse /geoserver  http://localhost:8080/geoserver
+ProxyPassReverse /geoserver/ http://localhost:8080/geoserver/
 ```
 
 y por último, reiniciar Apache:
